--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "Pretendard-Black";
+  src: url("./fonts/Pretendard-Black.ttf");
+}
+@font-face {
+  font-family: "Pretendard-Medium";
+  src: url("./fonts/Pretendard-Medium.ttf");
+}
+@font-face {
+  font-family: "Pretendard-SemiBold";
+  src: url("./fonts/Pretendard-SemiBold.ttf");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  color: #424242;
+  text-decoration: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.main_contents {
+  background: #efefef;
+  color: #424242;
   min-height: 100vh;
+  font-family: "Pretendard-Black";
+  padding-top: 54px;
+}
+.container {
+  width: 80%;
+  margin: auto;
+}
+.container .menu {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: right;
 }
 
-.App-link {
-  color: #61dafb;
+/* menu */
+.menu {
+  margin-bottom: 54px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav {
+  width: 414px;
 }
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  line-height: 27px;
+}
+nav ul li a {
+  transition: 0.3s ease-in-out;
+}
+nav ul li:hover a {
+  transition: 0.3s ease-in-out;
+  color: #ee9c50;
+}
+/* common */
+.title {
+  font-size: 36px;
+  line-height: 54px;
+  margin-bottom: 54px;
+}
+section {
+  padding-bottom: 135px;
+}
+span[role="img"] {
+  margin-left: 10px;
+}
+/* about */
+/* skills */
+/* works */
+/* contact */
