--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,11 @@ a {
   color: #424242;
   text-decoration: none;
 }
-.main_contents {
+body {
   background: #efefef;
+}
+.main_contents {
   color: #424242;
-  min-height: 100vh;
   font-family: "Pretendard-Black";
   padding-top: 54px;
 }
@@ -57,13 +58,19 @@ nav ul li:hover a {
   line-height: 54px;
   margin-bottom: 54px;
 }
+.section {
+  margin-bottom: 135px;
+}
 section {
-  padding-bottom: 135px;
+  margin-bottom: 135px;
 }
 span[role="img"] {
   margin-left: 10px;
 }
 /* about */
+.section img {
+  clip-path: circle(50% at 50% 50%);
+}
 /* skills */
 /* works */
 /* contact */
