--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,11 @@ body {
   font-family: "Pretendard-Black";
   padding-top: 54px;
 }
-.container {
-  width: 80%;
+.cont {
+  width: 70%;
   margin: auto;
 }
-.container .menu {
+.cont .menu {
   display: flex;
   justify-content: right;
 }
@@ -67,10 +67,48 @@ section {
 span[role="img"] {
   margin-left: 10px;
 }
+.menu nav li {
+  cursor: pointer;
+}
 /* about */
-.section img {
+#about img {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
   clip-path: circle(50% at 50% 50%);
 }
 /* skills */
+#skills ul {
+  gap: 15px 44px;
+}
 /* works */
+
+#works div {
+  gap: 300px;
+}
+#works div img {
+  width: 196px;
+}
 /* contact */
+#contact > div {
+  gap: 116px;
+}
+#contact .contacticon {
+  font-size: 100px;
+  --fa-beat-fade-opacity: 0.8;
+  --fa-beat-fade-scale: 1.075;
+}
+#contact .contacticon.mygit {
+  color: #853de2;
+}
+#contact .contacticon.myinsta {
+  width: 100px;
+  border-radius: 30px;
+  background: linear-gradient(
+    134.99deg,
+    #a50565 2.6%,
+    #e6483c 51.27%,
+    #dbff00 100.01%
+  );
+  color: #efefef;
+}
