--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,9 @@ nav ul {
   font-size: 20px;
   line-height: 27px;
 }
+nav ul li {
+  cursor: pointer;
+}
 nav ul li a {
   transition: 0.3s ease-in-out;
 }
@@ -116,4 +119,6 @@ span[role="img"] {
 .topbtn {
   font-size: 50px;
   color: #424242;
+  margin-bottom: 54px;
+  cursor: pointer;
 }
