--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
   font-family: "Pretendard-Black";
 }
 .cont {
-  width: 70%;
+  width: 80%;
   margin: auto;
 }
 .cont .menu {
@@ -72,12 +72,45 @@ span[role="img"] {
   cursor: pointer;
 }
 /* about */
+#about #profile {
+  font-family: "Pretendard-SemiBold";
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
 #about img {
   width: 400px;
   height: 400px;
   object-fit: cover;
   clip-path: circle(50% at 50% 50%);
 }
+#about .profile-desc {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+#about .profile-title1 {
+  font-family: "Pretendard-Black";
+  font-size: 20px;
+  line-height: 28px;
+  position: relative;
+  display: inline-block;
+}
+#about .profile-title1::before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  background: #ee9c50;
+  opacity: 50%;
+  top: 10px;
+  right: 0;
+  left: 0;
+  bottom: 5px;
+  z-index: -1;
+}
+#about .profile-con p {
+  line-height: 20px;
+}
+
 /* skills */
 #skills .skillpart {
   display: flex;
@@ -108,7 +141,15 @@ span[role="img"] {
 }
 
 /* works */
-
+.work-link {
+  width: 100%;
+  height: 100%;
+  transition: 0.3s;
+}
+.work-link.moving {
+  height: 100%;
+  width: 414px;
+}
 /* #works div {
   gap: 300px;
 } */
@@ -120,9 +161,9 @@ span[role="img"] {
 #works .worksbg {
   position: relative;
 }
-#works div img {
+/* #works div img {
   width: 100%;
-}
+} */
 #works .workstt {
   position: absolute;
   top: 50%;
@@ -163,4 +204,10 @@ span[role="img"] {
   color: #424242;
   margin-bottom: 54px;
   cursor: pointer;
+  text-align: right;
+}
+
+#footer {
+  text-align: center;
+  padding-bottom: 54px;
 }
